--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,16 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+
+	compileOnly "org.projectlombok:lombok"
+
+	annotationProcessor "org.projectlombok:lombok"
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	testCompileOnly "org.projectlombok:lombok"
+
+	testAnnotationProcessor "org.projectlombok:lombok"
 }
 
 tasks.named('test') {
