--- a/build.gradle
+++ b/build.gradle
@@ -13,17 +13,19 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation("org.springframework.boot:spring-boot-starter")
+	implementation("org.springframework.boot:spring-boot-starter-web")
+	implementation("org.springframework.boot:spring-boot-starter-webflux")
 
-	compileOnly "org.projectlombok:lombok"
+	compileOnly("org.projectlombok:lombok")
 
-	annotationProcessor "org.projectlombok:lombok"
+	annotationProcessor("org.projectlombok:lombok")
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation("org.springframework.boot:spring-boot-starter-test")
 
-	testCompileOnly "org.projectlombok:lombok"
+	testCompileOnly("org.projectlombok:lombok")
 
-	testAnnotationProcessor "org.projectlombok:lombok"
+	testAnnotationProcessor("org.projectlombok:lombok")
 }
 
 tasks.named('test') {
